# GGD-AI

./: .gitignore  README.md  create_icon.py  extract_speaker_num.py  extract_speaker_statement.py  fix_icon.py  game_analysis.json  main_monitor.py  package-lock.json  package.json  requirements.txt  screen_monitor.py  t_ocr.py  temp.py  temp2.py  temp3.py  tsconfig.json  vite.config.ts  window_selector.py
.claude/: settings.local.json
frontend/: index.html
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AIAnalysisPanel.tsx  InitScreen.tsx  MainScreen.tsx  SetupScreen.tsx
frontend/src/contexts/: MonitorContext.tsx
frontend/src/hooks/: useMonitor.ts
frontend/src/styles/: acrylic.css  ai-analysis.css
frontend/src/types/: analysis.ts
scripts/: start-dev.bat
src/: ai_game_analyzer.py  api_server.py  game_analysis.json  main.py  monitor_controller.py  player_id_extractor.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: App.tsx  lib.rs  main.rs  main.tsx  styles.css
src-tauri/src/components/: InitScreen.tsx  MainScreen.tsx  MessageItem.tsx  MessageList.tsx  ToggleButton.tsx
src-tauri/src/contexts/: MonitorContext.tsx
src-tauri/src/hooks/: useMonitor.ts  useWebSocket.ts
src-tauri/src/styles/: acrylic.css  global.css
src-tauri/src/types/: index.ts
