[package]
name = "ggd-ai"
version = "0.1.0"
edition = "2021"

[lib]
name = "ggd_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ggd-ai"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
